Cleanup the sample-service project
- Remove dead file references
- Correct library paths to service-base

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,17 @@
 *.out
 *.app
 *.user
+
+# Other build artifacts
+*.vs
+*.bin
+*.res
+*.log
+*.pdb
+*.tlog
+*.idb
+*.ilk
+*.iobj
+*.ipdb
+event_ids.rc
+event_ids.h
